--- a/finalProject/Base.lproj/Main.storyboard
+++ b/finalProject/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5yY-ip-gX6">
-                                <rect key="frame" x="127" y="515" width="161" height="39"/>
+                                <rect key="frame" x="115" y="515" width="184" height="39"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.99607843137254903" green="0.54509803921568623" blue="0.49411764705882355" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Button"/>
@@ -47,17 +47,6 @@
                                 </buttonConfiguration>
                                 <connections>
                                     <segue destination="ohQ-jn-GzL" kind="show" id="kNo-fW-ULu"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vEq-gs-6X1">
-                                <rect key="frame" x="127" y="572" width="161" height="39"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Not On Your Period">
-                                    <color key="baseBackgroundColor" red="0.99607843139999996" green="0.5450980392" blue="0.4941176471" alpha="1" colorSpace="calibratedRGB"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <segue destination="5PK-bO-BXk" kind="show" id="7nL-1z-2ZL"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Please let us know if you are on your period!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJ2-6C-rvl">
@@ -71,6 +60,17 @@
                                 <rect key="frame" x="-53" y="0.0" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vEq-gs-6X1">
+                                <rect key="frame" x="115" y="562" width="184" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Not On Your Period">
+                                    <color key="baseBackgroundColor" red="0.99607843139999996" green="0.5450980392" blue="0.4941176471" alpha="1" colorSpace="calibratedRGB"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="5PK-bO-BXk" kind="show" id="7nL-1z-2ZL"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.92156862745098034" green="0.90196078431372551" blue="0.88627450980392153" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -718,11 +718,23 @@
         <!--Super Cool App-->
         <scene sceneID="UJi-WS-87P">
             <objects>
-                <tableViewController id="ynJ-XZ-Lr0" customClass="ToDoTableViewController" customModule="finalProject" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController modalPresentationStyle="fullScreen" id="ynJ-XZ-Lr0" customClass="ToDoTableViewController" customModule="finalProject" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="uW1-cn-EEM">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="sMv-Ov-uMI">
+                            <rect key="frame" x="0.0" y="110.5" width="414" height="39"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" red="0.99607843139999996" green="0.5450980392" blue="0.4941176471" alpha="1" colorSpace="calibratedRGB"/>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="filled" title="BACK">
+                                <color key="baseBackgroundColor" red="0.99607843139999996" green="0.5450980392" blue="0.4941176471" alpha="1" colorSpace="calibratedRGB"/>
+                            </buttonConfiguration>
+                            <connections>
+                                <segue destination="ohQ-jn-GzL" kind="show" id="rOd-yp-UVg"/>
+                            </connections>
+                        </button>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" id="c7g-9B-oc9">
                                 <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
@@ -732,7 +744,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="aGb-4p-Fse" kind="show" id="gTf-oH-ZfB"/>
+                                    <segue destination="aGb-4p-Fse" kind="show" identifier="moveToComplete" id="gTf-oH-ZfB"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -756,9 +768,9 @@
         <!--Add To Do View Controller-->
         <scene sceneID="0SR-VS-eBc">
             <objects>
-                <viewController id="zQa-dX-r4h" customClass="AddToDoViewController" customModule="finalProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="zQa-dX-r4h" customClass="AddToDoViewController" customModule="finalProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OqR-0v-zSD">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3ef-3F-oRg">
@@ -811,11 +823,11 @@
         <!--Navigation Controller-->
         <scene sceneID="Pug-JD-OYh">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FZL-Hb-PaU" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="FZL-Hb-PaU" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="GoB-Mq-uRB"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="EUL-S0-3qt">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -830,30 +842,38 @@
         <!--Complete To Do View Controller-->
         <scene sceneID="YxJ-sH-GxA">
             <objects>
-                <viewController id="aGb-4p-Fse" customClass="CompleteToDoViewController" customModule="finalProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="aGb-4p-Fse" customClass="CompleteToDoViewController" customModule="finalProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tZ7-kp-x48">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLa-2H-PuJ">
-                                <rect key="frame" x="134" y="241" width="146" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GQg-wj-WV6">
+                                <rect key="frame" x="164" y="457" width="87" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Complete"/>
+                                <connections>
+                                    <action selector="completeTapped:" destination="aGb-4p-Fse" eventType="touchUpInside" id="ceG-Dl-vjf"/>
+                                    <segue destination="ynJ-XZ-Lr0" kind="show" id="73u-LB-PGR"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ToDo: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLa-2H-PuJ">
+                                <rect key="frame" x="20" y="374.5" width="374" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GQg-wj-WV6">
-                                <rect key="frame" x="178" y="457" width="59" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Done"/>
-                                <connections>
-                                    <action selector="completeTapped:" destination="aGb-4p-Fse" eventType="touchUpInside" id="ceG-Dl-vjf"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="zft-tg-Zjy"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="GQg-wj-WV6" firstAttribute="top" secondItem="nLa-2H-PuJ" secondAttribute="bottom" constant="62" id="1q5-zI-wG5"/>
+                            <constraint firstItem="zft-tg-Zjy" firstAttribute="bottom" secondItem="GQg-wj-WV6" secondAttribute="bottom" constant="374" id="2h8-gw-YM9"/>
+                            <constraint firstItem="nLa-2H-PuJ" firstAttribute="top" secondItem="zft-tg-Zjy" secondAttribute="top" constant="330.5" id="75L-20-Cnw"/>
+                            <constraint firstItem="zft-tg-Zjy" firstAttribute="trailing" secondItem="nLa-2H-PuJ" secondAttribute="trailing" constant="20" id="DgH-zh-uYX"/>
+                            <constraint firstItem="nLa-2H-PuJ" firstAttribute="leading" secondItem="zft-tg-Zjy" secondAttribute="leading" constant="20" id="OrU-pz-PES"/>
+                            <constraint firstItem="GQg-wj-WV6" firstAttribute="leading" secondItem="zft-tg-Zjy" secondAttribute="leading" constant="164" id="SfB-2v-Ada"/>
+                            <constraint firstItem="zft-tg-Zjy" firstAttribute="trailing" secondItem="GQg-wj-WV6" secondAttribute="trailing" constant="163" id="vTq-ex-PMf"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="gQs-Zc-eD9"/>
                     <connections>
@@ -862,11 +882,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TQe-6K-lBt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2662" y="1465"/>
+            <point key="canvasLocation" x="1573.913043478261" y="1570.9821428571429"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="iJo-Qu-zwn"/>
+        <segue reference="gTf-oH-ZfB"/>
+        <segue reference="73u-LB-PGR"/>
+        <segue reference="rOd-yp-UVg"/>
         <segue reference="EaT-gB-Bc1"/>
         <segue reference="DXg-17-Frf"/>
         <segue reference="FaV-hr-oVf"/>
